--- a/m_html/2_login.html
+++ b/m_html/2_login.html
@@ -63,12 +63,25 @@
                     },
                     body: JSON.stringify({ email, password }),
                     credentials: 'include',
-                });
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data.redirectUrl) {
+                        window.location.href = data.redirectUrl;
+                        } else {
+                        console.error('리다이렉션 URL이 없습니다.');
+                        }
+                    })
+                    .catch(error => console.error('로그인 요청 중 오류 발생:', error));
 
                 if (response.ok) {
-                    // 성공 시 메모 목록 페이지로 리다이렉트
-                    alert('로그인 성공!');
-                    window.location.href = '/3_memo_list.html';
+                    // 성공 시 리다이렉트
+                    const data = await response.json();
+                    if (data.redirectUrl) {
+                        window.location.href = data.redirectUrl;
+                    } else {
+                        alert('로그인 성공! 하지만 리다이렉션 URL이 없습니다.');
+                    }
                 } else {
                     const errorData = await response.json();
                     alert(`로그인 실패: ${errorData.error || '알 수 없는 오류'}`);
