--- a/m_html/5_mod_memo.html
+++ b/m_html/5_mod_memo.html
@@ -8,13 +8,12 @@
 </head>
 <body>
     <section class="wrap">
-        <h1 class="name">아무 말 대잔치</h1>
+        <h1 class="name" id="header-title">아무 말 대잔치</h1>
         <hr class="horizontal-rule"/>
         <h1 class="page_title">게시글 수정</h1>
         <div class="dropdown">
             <button class="dropbtn"> 
-                <span 
-                class="dropbtn_icon">profile-pic</span>
+                <img id="dropdown-profile-pic" class="dropbtn_icon" alt="프로필 사진" src="default-profile.jpg" />
             </button>
             <div class="dropdown-content">
                 <button class="menu" id="log_out_btn">로그아웃</button>
@@ -33,7 +32,11 @@
                 <textarea id="context" name="context" rows="10" required></textarea>
                 <hr class="horizontal-rule"/>      
                 <p class="description">이미지</p>
-                <input type="file" id="memo_img" name="memo_img" accept="image/*">
+                <div class="file-upload-wrapper">
+                    <label for="memo_img" class="custom-file-label">사진업로드</label>
+                    <span id="file-name" class="file-name"></span>
+                    <input type="file" id="memo_img" name="memo_img" accept="image/*" style="display:none;">
+                </div>
                 <article class="buttons">
                     <button class="button" type="submit">수정하기</button>
                 </article>
@@ -43,15 +46,43 @@
     <script>
         
         const API_BASE_URL = 'http://localhost:5000';
+
+         // 버튼 동작: 메인화면
+         document.getElementById('header-title').addEventListener('click', () => {
+            window.location.href = '/3_memo_list.html';
+        });
+ 
         // 버튼 동작: 내 정보 보기
         document.getElementById('mod_my_btn').addEventListener('click', () => {
             window.location.href = '/7_my_info.html';
         });
 
-        // 버튼 동작: 로그아웃
+       // 버튼 동작: 로그아웃
         document.getElementById('log_out_btn').addEventListener('click', () => {
             window.location.href = '/2_login.html';
         });
+ 
+        async function loadUserInfo() {
+            try {
+                const response = await fetch(`${API_BASE_URL}/api/check_session`, {
+                    credentials: 'include',
+                });
+                if (!response.ok) {
+                    alert('로그인이 필요합니다.');
+                    window.location.href = '/2_login.html';
+                    return;
+                }
+
+                const { user } = await response.json();
+
+                // 프로필 사진 업데이트
+                const dropdownProfilePic = document.getElementById("dropdown-profile-pic");
+                dropdownProfilePic.src = user.img ? `${API_BASE_URL}${user.img}` : 'default-profile.jpg'; // 세션에서 이미지 경로 가져오기
+            } catch (err) {
+                console.error("사용자 정보 로드 중 오류 발생:", err);
+            }
+        }
+
 
         // URL의 쿼리 파라미터 추출
         function getQueryParams() {
@@ -87,11 +118,59 @@
                 document.getElementById('id').value = memo.id;
                 document.getElementById('title').value = memo.title || '';
                 document.getElementById('context').value = memo.context || '';
+            // 이미지 처리
+            const memoImgInput = document.getElementById('memo_img');
+                const existingFileNameLabel = document.querySelector('.file-name-label');
+                if (existingFileNameLabel) existingFileNameLabel.remove(); // 기존 파일명 라벨 제거
+
+                const fileNameLabel = document.createElement('span');
+                fileNameLabel.className = 'file-name-label';
+
+                const memoImgPreview = document.querySelector('.image-preview') || document.createElement('div');
+                memoImgPreview.className = 'image-preview';
+                memoImgPreview.innerHTML = ''; // 초기화
+
+                if (memo.img) {
+                    // 기존 이미지가 있을 경우
+                    const fileName = memo.img.split('/').pop(); // 서버에서 파일명 추출
+                    fileNameLabel.textContent = fileName; // 파일명 설정
+                    const imgPreview = document.createElement('img');
+                    imgPreview.src = `${API_BASE_URL}${memo.img}`; // API_BASE_URL
+                    imgPreview.style.width = '100px';
+                    imgPreview.style.height = 'auto';
+                    memoImgPreview.appendChild(imgPreview);
+                } else {
+                    // 기존 이미지가 없을 경우
+                    fileNameLabel.textContent = '사진을 추가해 보세요!';
+                }
+
+                memoImgInput.parentNode.insertBefore(fileNameLabel, memoImgInput.nextSibling);
+                memoImgInput.parentNode.insertBefore(memoImgPreview, fileNameLabel.nextSibling);
+
+                // 파일 입력 변경 이벤트
+                memoImgInput.addEventListener('change', (event) => {
+                    const file = event.target.files[0];
+                    if (file) {
+                        // 새 파일 선택 시 업데이트
+                        fileNameLabel.textContent = file.name; // 파일명 업데이트
+                        memoImgPreview.innerHTML = ''; // 기존 미리보기 초기화
+                        const newImgPreview = document.createElement('img');
+                        newImgPreview.src = URL.createObjectURL(file);
+                        newImgPreview.style.width = '100px';
+                        newImgPreview.style.height = 'auto';
+                        memoImgPreview.appendChild(newImgPreview);
+                    } else {
+                        // 파일 선택 취소 시 메시지 표시
+                        fileNameLabel.textContent = '선택된 사진이 없습니다';
+                        memoImgPreview.innerHTML = ''; // 미리보기 초기화
+                    }
+                });
             } catch (err) {
                 console.error('데이터 로드 중 오류 발생:', err);
                 alert('게시물을 불러오는 데 실패했습니다.');
             }
         }
+
 
 
 
@@ -131,7 +210,7 @@
         });
 
         // 페이지 로드 시 데이터 로드
-        document.addEventListener('DOMContentLoaded', loadMemoDetails);
+        document.addEventListener('DOMContentLoaded', loadMemoDetails, loadUserInfo());
     </script>
 </body>
 </html>
