--- a/m_html/8_mod_pw.html
+++ b/m_html/8_mod_pw.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="wrap">
-        <h1 class="name">아무 말 대잔치</h1>
+        <h1 class="name" id="header-title">아무 말 대잔치</h1>
         <hr class="horizontal-rule"/>
         <h1 class="page_title">비밀번호 변경</h1>
         <div class="dropdown">
@@ -53,6 +53,11 @@
             } catch (err) {
                 console.error('로그아웃 오류:', err);
             }
+        });
+
+        // 버튼 동작: 메인화면
+        document.getElementById('header-title').addEventListener('click', () => {
+            window.location.href = '/3_memo_list.html';
         });
 
         // 내 정보 수정 버튼 클릭
