--- a/m_html/5_mod_memo.html
+++ b/m_html/5_mod_memo.html
@@ -171,7 +171,28 @@
             }
         }
 
+        async function checkSession() {
+            try {
+                const response = await fetch(`${API_BASE_URL}/api/check_session`, {
+                    credentials: 'include',
+                });
 
+                if (!response.ok) {
+                    console.error('세션 확인 실패:', await response.json());
+                    alert('로그인이 필요합니다.');
+                    window.location.href = '/2_login.html';
+                    return null;
+                }
+
+                const { user } = await response.json();
+                console.log('로그인된 사용자:', user);
+                return user;
+            } catch (err) {
+                console.error("세션 확인 중 오류 발생:", err);
+                alert('세션을 확인할 수 없습니다.');
+                return null;
+            }
+        }
 
 
         document.getElementById('memo-mod-form').addEventListener('submit', async (event) => {
@@ -185,8 +206,10 @@
                 formData.append('id', id);
             }
 
-    
+        
             try {
+                const user = await checkSession();
+                if (!user) return;
                 const response = await fetch(`${API_BASE_URL}/mod_memo`, {
                     method: 'PATCH',
                     body: formData,
