--- a/m_html/6_add_memo.html
+++ b/m_html/6_add_memo.html
@@ -10,7 +10,7 @@
     <section class="wrap">
         <h1 class="name" id="header-title">아무 말 대잔치</h1>
         <hr class="horizontal-rule"/>
-        <h1 class="page_title">게시글 보기</h1>
+        <h1 class="page_title">게시글 작성</h1>
         <div class="dropdown">
             <button class="dropbtn"> 
                 <img id="dropdown-profile-pic" class="dropbtn_icon" alt="프로필 사진" src="default-profile.jpg" />
